--- a/Desarrollo/backend/.gitignore
+++ b/Desarrollo/backend/.gitignore
@@ -22,3 +22,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.firebase.ts
+.firebaseAdminConfig.ts
+.salfa-capacitaciones-firebase-adminsdk-ivkuy-ff2a2488af.json
