--- a/Desarrollo/backend/package.json
+++ b/Desarrollo/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "supertokens-node": "^20.1.3"
   },
   "devDependencies": {
