CRUD curso terminado

--- a/Desarrollo/backend/.env
+++ b/Desarrollo/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://nes:negrata7531@localhost:5432/salfa_capacitaciones"
+DATABASE_URL="postgresql://postgres:supasupa@localhost:5432/postgres"
