Refactorizacion proyecto base y creacion de ususarios

--- a/Desarrollo/backend/.gitignore
+++ b/Desarrollo/backend/.gitignore
@@ -24,4 +24,5 @@ dist-ssr
 *.sw?
 firebase.js
 firebaseAdminConfig.js
-salfa-capacitaciones-firebase-adminsdk-ivkuy-ff2a2488af.json
+salfa-capacitaciones-firebase-adminsdk-ivkuy-be53e67b12.json
+firebase
