--- a/Desarrollo/backend/package.json
+++ b/Desarrollo/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,17 +12,21 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
     "supertokens-node": "^20.1.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.7.4"
+    "@types/node": "^22.7.4",
+    "nodemon": "^3.1.7"
   }
 }
