arreglo merge anterior (pdf, avance área)

--- a/Desarrollo/backend/.gitignore
+++ b/Desarrollo/backend/.gitignore
@@ -28,3 +28,4 @@ salfa-capacitaciones-firebase-adminsdk-ivkuy-be53e67b12.json
 firebase
 dbconfig.js
 jwtConfig.js
+salfa-capacitaciones-firebase-adminsdk-ivkuy-ff2a2488af.json
