--- a/Desarrollo/client/package.json
+++ b/Desarrollo/client/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.1",
+    "framer-motion": "^11.11.13",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.447.0",
@@ -34,7 +35,6 @@
     "react-router-dom": "^6.26.2",
     "reactfire": "^4.2.3",
     "recharts": "^2.13.0",
-    "sweetalert2": "^11.6.13",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.3",
     "tailwind-merge": "^2.5.3",
