--- a/Desarrollo/client/package.json
+++ b/Desarrollo/client/package.json
@@ -47,7 +47,8 @@
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
