--- a/Desarrollo/client/package.json
+++ b/Desarrollo/client/package.json
@@ -45,6 +45,7 @@
     "sass": "^1.80.6",
     "sonner": "^1.5.0",
     "sortablejs": "^1.15.3",
+    "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
