--- a/Desarrollo/client/package.json
+++ b/Desarrollo/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@types/express-fileupload": "^1.5.1",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/sortablejs": "^1.15.8",
@@ -45,6 +46,7 @@
     "sass": "^1.80.6",
     "sonner": "^1.5.0",
     "sortablejs": "^1.15.3",
+    "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
