--- a/Desarrollo/backend/package.json
+++ b/Desarrollo/backend/package.json
@@ -24,6 +24,7 @@
     "firebase-admin": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "supertokens-node": "^21.0.0"
   },
